[tool.poetry]
name = "simple-robotics-python-utils"
version = "0.1.0"
description = "utils for robotics development"
authors = ["rico jia <ruotongjia2020@u.northwestern.edu>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
posix-ipc = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
